All pictures should stop stretching now !

--- a/frontend/scss/_feed.scss
+++ b/frontend/scss/_feed.scss
@@ -24,7 +24,7 @@
   max-width: 10%;
   transform: scale(10);
   transform-origin: center top;
-  right: 50%;
+  right: 45%;
 }
 
 .likeTextFeed2 {
