--- a/frontend/scss/_profile.scss
+++ b/frontend/scss/_profile.scss
@@ -11,12 +11,14 @@
 }
 
 .pictureProfile {
-  left: 0;
+  left: 45%;
   position: absolute;
   top: 0;
   overflow: hidden;
-  width: 100%;
-  height: 100%;
+  max-width: 10%;
+  max-height: 10%;
+  transform: scale(10);
+  transform-origin: center top;
 }
 
 .textOptionProfile {
